[package]
name = "mqtt"
version = "0.1.0"
authors = ["Anatol Ulrich <anatol.ulrich@ferrous-systems.com>"]
edition = "2018"
resolver = "2"

[profile.release]
opt-level = "s"

[profile.dev]
debug = true # Symbols are nice and they don't increase the size on Flash
opt-level = "z"

[features]
native = ["esp-idf-sys/native"]

[dependencies]
esp-idf-sys = { version = "0.29", features = ["binstart"] }
esp-idf-svc = "0.35"
esp-idf-hal = "0.31"
embedded-svc = "0.16"
anyhow = {version = "1", features = ["backtrace"]}
log = "0.4"
mqttbytes = "0.6.0"
bytes = "1.1.0"
thiserror = "1.0"
url = "2.2"

[build-dependencies]
embuild = "0.28.0"
anyhow = "1"

[patch.crates-io]
#smol = { git = "https://github.com/esp-rs-compat/smol" }
#polling = { git = "https://github.com/esp-rs-compat/polling" }
#socket2 = { git = "https://github.com/esp-rs-compat/socket2" }
getrandom = { version = "0.2", git = "https://github.com/esp-rs-compat/getrandom.git" }